[gd_scene load_steps=14 format=4 uid="uid://b3w0jfcg244y7"]

[ext_resource type="Script" path="res://Player1/player_p1.gd" id="1_6yvg6"]
[ext_resource type="PackedScene" uid="uid://cm2iltdeqme8o" path="res://Player1/bullet_p1.tscn" id="2_ivlod"]
[ext_resource type="AudioStream" uid="uid://b5hygifi3fm45" path="res://Player1/682464__supersouper__revolver-fire.wav" id="3_pf4wy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btcuu"]
size = Vector2(9, 24)

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_udv5e"]
_data = PackedByteArray("AAADAAUAAAABAAAAQAEAAEABAAAQBwAAUklGRggHAABXRUJQVlA4TPwGAAAvP8FPEKegtLadJj4q9OZwrMBETMgw1XPQsayhJLat6Lkv1wRIPEMOipKDMjueQW0kW8nHIkL3EqiKXslpxImZ/wAAAPz/4zeMm1QIOmlJmOcEhUf0A6lQYnGzDm+2NF27lrmyqhyzWxNQkG03bh0BmWjzgwI70P732iQop/QEihkd0X8IbttIkuRUX3spNdU9g30CvbGOar+u8fueurdq/L6n7a16jGr8vifs/SLx+56CNyTcYi39++P3PW1vs08cv++pe5tP/L4n7s3x+56+9+ZC8fueuLfF73sW3uKR86FiL7xD9v2CwN6y79JzunhpITr0Dtr3IdG8C3MXPwTkTcB5796E7XsMbN4HaSRjzGTu3mbweYdx2PikvV2+fSMcLswM9u4GqjP3/taKCOx9AWju3t++f993vPeto3AUC7Nn6t6qJBLTm5h5ZPbeIkG9c85Y8kS8RSJ7JzgpPAk/72Ayp9QJ7N3A992RuN4pwSceSXLeBK+U4nr7cYFCcpmCe4MhwuImHjkOCt033htMgpKgjA2DX3k4yRF4ny6wH9qf+qBHC4zH49kChTrdHd831nvdGZz7wAKdtcdjANw3HFp6iASJkODp9p2gfQvJJRDgZWnpzy003h3fdzjv4/XWeSDvO+SqHdt17vC+I87bsGbC5uCGm3qe0YserpYvb/95O80H/WxHtV/XeXh/wPqOjM9VvD9QfaNRDbvuVI9RvYT3R+y+461bfRm0tydy31Ffd26xFmqZvzf6dQdi9okdV/AW+kB74+Yt9LoxH7y3Rz7g3th5C7tu8X0fIC2BvQOv282F0N5CtItIYO8t8ro1D9xb9l1ie1PcdUvFHOIRov++QrzleNpDelPYdUulhah5y75Lz+cv/xfC+9WNF9D7AusWOJhd40fQ2YO7OPELQN74eQN7QxljJjjv/n1KRGDv4EDPjwB5D+K975jeDIcvQBm8VXHe46xjvZGUhuC98Uzcm5lV5ALeN05p7DveGw3z1L3NJLY3MfPkvc2Ce+eWFfROi+edOaW5e8sVvOE1e2+RS3ijJ27pvFOHFs47LYL3ug96PJ4tv/y86dedt5CsnnfLs4nfu/c1ntvPBfBevrz95+0/v3dQ7dc1vje87dD4xPcO2zZ8zRyjOlvvim/buyKtSV8mvvcF2sY2Tqhwi7VQVO8K9q4H2nGfOuT6/sRYzAzpXYHetdeojfw2MzMw5hPUu+K9kdpaVf1d09WxG8+MvStVcNt1uGsMzeYS3zuadn3FBj5xTNm7HraNXnVYqFgnvjdcG7M/BrsrhQhpXsoUvM/ncNINXaVT6La9mfHLhm8eKs4bfQ6GmSftXS8ENwT7us/BG00R7H2ngtQmnr13wc97MdN9h3oz3723mTDfujezMKO/APY2m4B37HnPLTfvbZavQJq/N5wERjildfOmjiydN+WepfNOHVo477QI3us+6PF4tvzy86Zfd95CsnreLc8mfu/e13huPxfAe/ny9p+3//zVh67cz6r7Pl051B0tHAv4HWpGtnJlPcsGucFAVO9/MLv9BuP+r7Fj27Y129eWxrZh8B+3jG7/gJiRrMEbHvfDUgqgbp96VKVwK8xgs+3+PzH00Smg8w0G6Z1sHCKosW23Th1R3XfER1Y3SoFht3AywizMZ8MHYA5u4k2vdsyIOWdmPv209gMr3Gs/+8rBY2f+dUQ/SKe+bfvPrMW96emOeNXV/G1zEVJKsb3NBtLZ7zrcy10XPteayG/Gp85O3Tphpz3nTHBvPCInT131RY6cXaEoO/cgi1n6xBHeG5rscvrMVToii5yprY6tw1yUpQGcOGYH3BtfCSPuIc5DzoV542KFufjXHcfOztrNWzTvevzocZz+qbUOEJ0OkbIPniK7uM8fTjyaN3IQ1fFDlyed37a6cvdsHzhKizou4g3k8Xi2EJ2/a5hhvJWYmBxHfYOmnXtyDuddKxxfRChU+52DQ4nIv+05Sil4b8i6/REokrdSz0tOfdFp+KeJn/XreOMS2dvsmNMnfhs/t4K9L4GQRPSuHjOIt5IZmzkI622jN5qWJ2Lif8QbdADxHv7twVthpit543/sGci7VrS3x5i54r3r8byHSwX7Vpw2aQ+71Frh3s487M/CGOcKjI6zXpHeVIfQtIM+pGHeod53Xv1smHio9wG3HB2eQWDve+ci3rcOvPSoaPny9p+3/7z95w8wUkrLN3LOKwez5JUr5s7C1c6cW9KqVZFdmNksLxqlRR0LN7gn52fLOqENs63FUUp5PJYK1T5c+SMiB9Fa1bhbMkjb4F7Wr5CQLBeq/ZT7SafluVxlrphrTz9Zq9IeZh7wX2pZLNQdvWS1DqkuXZEqLV0R0RJCtHboK1Ytx2PpLtC/kEM=")
size_override = Vector2(320, 320)

[sub_resource type="Animation" id="Animation_87gw3"]
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_axkoc"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [8, 9, 10]
}

[sub_resource type="Animation" id="Animation_gtit4"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 3, 4]
}

[sub_resource type="Animation" id="Animation_bm6bx"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 7]
}

[sub_resource type="Animation" id="Animation_j7blb"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b31ni"]
_data = {
"die": SubResource("Animation_87gw3"),
"idle": SubResource("Animation_axkoc"),
"reload": SubResource("Animation_gtit4"),
"shoot": SubResource("Animation_bm6bx"),
"walk": SubResource("Animation_j7blb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_evygs"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p67kp"]
size = Vector2(11, 24)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_6yvg6")
initial_speed = 150
speed = 150
bullet = ExtResource("2_ivlod")
shoot_delay = 0.5
reload_delay = 0.5
shoot_sound = ExtResource("3_pf4wy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, 4)
shape = SubResource("RectangleShape2D_btcuu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("PortableCompressedTexture2D_udv5e")
hframes = 5
vframes = 5
frame = 8
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"i_mode": 0,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "Sprite2D/AnimationPlayer",
"slice": "",
"source": "res://Player1/player1.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "887c282c103b83af125e95436ae5c6be"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_b31ni")
}

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(12, -8)

[node name="AttackTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="." groups=["players"]]

[node name="head_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="head_area"]
position = Vector2(-2, -14)
shape = SubResource("CircleShape2D_evygs")
debug_color = Color(0.686275, 0.164706, 0.207843, 0.666667)

[node name="body_area" type="Area2D" parent="." groups=["bullet"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="body_area"]
position = Vector2(-3.5, 4)
shape = SubResource("RectangleShape2D_p67kp")
debug_color = Color(0.858824, 0.360784, 0.141176, 0.615686)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
